# cirious_codex_logger

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: async_logging.rs  basic_logging.rs  basic_usage.rs  rolling_file.rs
src/: dispatcher.rs  format.rs  level.rs  lib.rs  log.rs  style.rs
tests/: async_flow_test.rs  file_rotation_test.rs  integration_test.rs
