[package]
name = "cirious-codex-logger"
authors = ["Cirious Studio <cirious.studio@proton.me>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Structured logging library for the Cirious Codex ecosystem."
repository = "https://github.com/Cirious-Studio/cirious_codex_logger"

[dependencies]
cirious_codex_term = { git = "https://github.com/cirious-studio/cirious_codex_term.git"}
