[package]
name = "cirious_codex_logger"
version = "0.2.1"
authors = ["Cirious Studio <cirious.studio@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Structured logging library for the Cirious Codex ecosystem."
repository = "https://github.com/Cirious-Studio/cirious_codex_logger"
homepage = "https://github.com/Cirious-Studio/cirious_codex_logger"
documentation = "https://docs.rs/cirious_codex_logger"
readme = "README.md"
categories = ["development-tools::debugging", "command-line-interface"]
keywords = ["logging", "logger", "terminal", "observability", "tracing"]

[dependencies]
cirious_codex_term = "0.2.1"

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
